homelab/stirling-pdf/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stirling-pdf
  annotations:
    argocd.argoproj.io/sync-wave: "0"
